kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-frontend
  template:
    metadata:
      labels:
        app: webapp-frontend
    spec:
      containers:
      - name: webapp-frontend
        image: eduardsolibros1/webapp-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-frontend-service
  namespace: default
spec:
  selector:
    app: webapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
